attempt to fix the bug on iphone safari

--- a/main.css
+++ b/main.css
@@ -85,6 +85,7 @@ hr.style {
   top: 0;
   left: 0;
   height: 100vh;
+  height: -webkit-fill-available;
   overflow-y: auto;
   background-color: var(--navbar);
   z-index: 9999;
